ensure path entry exist when init dna

--- a/workdir/happ.yaml
+++ b/workdir/happ.yaml
@@ -11,7 +11,7 @@ slots:
     dna:
       bundled: "../dna/workdir/referral.dna"
       properties: ~
-      uuid: ~
+      uid: ~
       version: ~
       clone_limit: 0
 
